get mails  update

--- a/BulkMailBackendProject/Helpers/Helpers.csproj
+++ b/BulkMailBackendProject/Helpers/Helpers.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessAndEntities\DataAccessAndEntities.csproj" />
+    <ProjectReference Include="..\DTOs\DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
