implemented background service

--- a/BulkMailBackendProject/BulkMailBackgroundService/BulkMailBackgroundService.csproj
+++ b/BulkMailBackendProject/BulkMailBackgroundService/BulkMailBackgroundService.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessAndEntities\DataAccessAndEntities.csproj" />
+    <ProjectReference Include="..\DTOs\DTOs.csproj" />
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
+  </ItemGroup>
 </Project>
